--- a/src/main/webapp/WEB-INF/templates/admin/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/admin/fragments.html
@@ -64,15 +64,15 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Sảnh cưới
                     </a>
-                    <a class="nav-link" href="service.html">
+                    <a class="nav-link" href="/admin/dich-vu">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Dịch vụ
                     </a>
-                    <a class="nav-link" href="menufood.html">
+                    <a class="nav-link" href="/admin/menu-food">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Menu thức ăn
                     </a>
-                    <a class="nav-link" href="contact.html">
+                    <a class="nav-link" href="/admin/lien-he">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Phản hồi
                     </a>
