--- a/src/main/webapp/WEB-INF/templates/admin/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/admin/fragments.html
@@ -15,9 +15,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
     <script th:src="@{/admin1/assets/js/scripts.js}" ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script th:src="@{/admin1/assets/assets/demo/chart-area-demo.js}"></script>
-    <script th:src="@{/admin1/assets/assets/demo/chart-bar-demo.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script th:src="@{/admin1/assets/js/datatables-simple-demo.js}"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/29.0.0/classic/ckeditor.js"></script>
@@ -76,19 +73,19 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Phản hồi
                     </a>
-                    <a class="nav-link" href="shift.html">
+                    <a class="nav-link" href="/admin/shift">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Ca tổ chức
                     </a>
-                    <a class="nav-link" href="customer.html">
+                    <a class="nav-link" href="/admin/khach-hang">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                         Khách hàng
                     </a>
-                    <a class="nav-link" href="employee.html">
+                    <a class="nav-link" href="/admin/nhan-vien">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                         Nhân viên
                     </a>
-                    <a class="nav-link" href="charts.html">
+                    <a class="nav-link" href="/admin/tiec-cuoi">
                         <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                         Tiệc cưới
                     </a>
@@ -159,6 +156,7 @@
         </footer>
     </div>
 </div>
+
 
 </body>
 
