--- a/src/main/webapp/WEB-INF/templates/admin/service.html
+++ b/src/main/webapp/WEB-INF/templates/admin/service.html
@@ -57,7 +57,7 @@
                   <td th:text="${weddinghall.id}"></td>
                   <td>
                     <a href="" data-bs-toggle="modal" th:data-bs-target="'#exampleModalImg'+ ${weddinghall.id}"><img
-                            style="width: 120px !important;height: 150px !important;" th:src="@{'/user/assets/images/'+${weddinghall.image}}"
+                            style="width: 200px !important;height: 150px !important;" th:src="@{'/user/assets/images/'+${weddinghall.image}}"
                             class="img-fluid"></a>
 
                   </td>
@@ -124,12 +124,12 @@
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel" th:text="${weddinghall.name}"></h5>
+                        <h5 class="modal-title" id="exampleModalLabel" th:utext="${weddinghall.name}"></h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                 aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <p th:text="${weddinghall.description}"></p>
+                        <p th:utext="${weddinghall.description}"></p>
                       </div>
 
                     </div>
@@ -150,7 +150,7 @@
                       <div class="modal-body">
                         <form enctype="multipart/form-data" th:action="@{/admin/service-update}" method="post">
                           <input type="hidden" th:value="${weddinghall.id}" name="id">
-                          <input type="text" th:value="${weddinghall.image}" name="img">
+                          <input type="hidden" th:value="${weddinghall.image}" name="img">
                           <div class="row">
                             <div class="col-6">
                               <div class="">
@@ -266,36 +266,21 @@
     </script>
     <script>
 
-      var dodai = document.getElementById("dodai").value;
-
-      for(var i = 1;i<=dodai+10;i++){
-        var name = "#editor"  + i
-        ClassicEditor.create(document.querySelector(name)).then(eidt => {
-          console.log("da" + eidt);
-        })
-                .catch(error => {
-                  console.error(error);
-                });
-      }
+     var dodai = document.getElementById("dodai").value;
+     var a = parseInt(dodai);
+     for(var i = 1;i<=a+10;i++){
+       var name = "#editor"  + i
+       ClassicEditor.create(document.querySelector(name)).then(eidt => {
+         console.log("da" + eidt);
+       })
+               .catch(error => {
+                 console.error(error);
+               });
+     }
 
 
     </script>
-    <!--  <script>
 
-        var dodai = document.getElementById("dodai").value;
-
-        for (var i = 1; i < dodai; i++) {
-          var name = "editor" + i
-          ClassicEditor.create(document.querySelector(name)).then(eidt => {
-            console.log("da" + eidt);
-          })
-                  .catch(error => {
-                    console.error(error);
-                  });
-
-        }
-
-      </script>-->
     <footer th:replace="admin/fragments :: footer" class="py-4 bg-light mt-auto">
       <div class="container-fluid px-4">
         <div class="d-flex align-items-center justify-content-between small">
