--- a/src/main/webapp/WEB-INF/templates/admin/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/admin/fragments.html
@@ -23,7 +23,7 @@
 <body class="sb-nav-fixed">
     <nav th:fragment="html_nav" class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="index.html">QUẢN lÝ TIỆC CƯỚI</a>
+    <a class="navbar-brand ps-3" href="/admin/home">QUẢN lÝ TIỆC CƯỚI</a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
             class="fas fa-bars"></i></button>
@@ -53,7 +53,7 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
 
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="/admin/home">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Bảng điều khiển
                     </a>
